--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <font size="20"><b>Our small world</b></font>
 </center>
 <div align="left">
-<!-- LikeBtn.com BEGIN --> <span class="likebtn-wrapper" data-ef_voting="heartbeat" data-white_label="true" data-identifier="item_1"></span> <script>(function(d,e,s){if(d.getElementById("likebtn_wjs"))return;a=d.createElement(e);m=d.getElementsByTagName(e)[0];a.async=1;a.id="likebtn_wjs";a.src=s;m.parentNode.insertBefore(a, m)})(document,"script","//w.likebtn.com/js/w/widget.js");</script> <!-- LikeBtn.com END -->
 </div>
 </div>
 <br>
@@ -41,6 +40,14 @@
 <b><u>Cool pics of the week:</u></b>
 <img src="Potw/noimg.jpg" width="300" height="300" id="image_slider"/>
 </center>
+<br>
+<!-- begin wwww.htmlcommentbox.com -->
+ <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
+ <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
+ <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10&ts=1519794780540");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+<!-- end www.htmlcommentbox.com -->
+<br>
+<!-- LikeBtn.com BEGIN --> <span class="likebtn-wrapper" data-ef_voting="heartbeat" data-white_label="true" data-identifier="item_1"></span> <script>(function(d,e,s){if(d.getElementById("likebtn_wjs"))return;a=d.createElement(e);m=d.getElementsByTagName(e)[0];a.async=1;a.id="likebtn_wjs";a.src=s;m.parentNode.insertBefore(a, m)})(document,"script","//w.likebtn.com/js/w/widget.js");</script> <!-- LikeBtn.com END -->
 </div>
 </div>
 </tr>
@@ -85,11 +92,6 @@
 <p>2018/02/27</p>
 </fieldset>
 <br>
-<!-- begin wwww.htmlcommentbox.com -->
- <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
- <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
- <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10&ts=1519794780540");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
-<!-- end www.htmlcommentbox.com -->
 </div>
 </tr>
 </table>
@@ -108,6 +110,8 @@ color: white;
 float: left;
 width: 60%;
 height: 90%;
+display: flex; 
+flex-direction: column;
 left:0;
 background-image: url('cont.jpg');
 }
